--- a/index.html
+++ b/index.html
@@ -159,19 +159,12 @@
 
     <footer>
       <div class="socials">
-        <a href="https://www.instagram.com/ican.6/"
+        <a href="https://www.instagram.com/ican.6/" target="_blank"
           ><i data-feather="instagram"></i
         ></a>
-        <a href="https://www.facebook.com/Ican.Cibe"
+        <a href="https://www.facebook.com/Ican.Cibe" target="_blank"
           ><i data-feather="facebook"></i
         ></a>
-      </div>
-
-      <div class="links">
-        <a href="#Home">HOME</a>
-        <a href="#about">ABOUT</a>
-        <a href="#Bikes">OUR BIKES</a>
-        <a href="#Contact">CONTACT US</a>
       </div>
 
       <div class="credit">
